--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,11 @@
 	path = services/database
 	url = https://github.com/etchedheadplate/access-database.git
 	branch = develop
+[submodule "services/interface"]
+	path = services/interface
+	url = https://github.com/etchedheadplate/access-interface.git
+	branch = develop
+[submodule "services/validation"]
+	path = services/validation
+	url = https://github.com/etchedheadplate/access-validation.git
+	branch = develop
