Switch submodule URLs from HTTPS to SSH

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "services/database"]
 	path = services/database
-	url = https://github.com/etchedheadplate/access-database.git
+	url = git@github.com:etchedheadplate/access-database.git
 	branch = develop
 [submodule "services/interface"]
 	path = services/interface
-	url = https://github.com/etchedheadplate/access-interface.git
+	url = git@github.com:etchedheadplate/access-interface.git
 	branch = develop
 [submodule "services/validation"]
 	path = services/validation
-	url = https://github.com/etchedheadplate/access-validation.git
+	url = git@github.com:etchedheadplate/access-validation.git
 	branch = develop
